Move the settings into the actions and fix the layout issues

--- a/resources/assets/css/shared/general.less
+++ b/resources/assets/css/shared/general.less
@@ -38,7 +38,7 @@ a {
     padding: 20px;
 
     > .actions {
-      .flexy;
+      .flexy(center);
     }
 
     @media (max-width: @screen-sm-max) {
@@ -53,7 +53,6 @@ a {
     .settings {
       .flexy(center, center);
       height: initial;
-      padding: 10px 16px;
 
       color: @blueDark;
 
